--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,13 @@ Django==6.0.2
 django-cors-headers==4.9.0
 django-filter==25.2
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 gunicorn==25.1.0
 idna==3.11
 packaging==26.0
 pillow==12.1.1
 psycopg2-binary==2.9.11
+PyJWT==2.11.0
 python-dotenv==1.2.1
 requests==2.32.5
 sqlparse==0.5.5
